[package]
name = "alien_swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
graphical_alien_swarm_proc_macros = { path = "./graphical_alien_swarm_proc_macros" }
seq-macro = "0.3.3"
bitfield-derive = "0.2.1"
partial-min-max = "0.4.0"
rand = "0.8.5"
ron = "0.8.0"
random = "0.14.0"
paste = "1.0.12"
num-traits = "0.2.15"
serde_yaml = "0.9.22"
serde = { version = "1.0.171", features = ["derive"] }
sysinfo = "0.29.5"

bevy = "0.10.1"
bevy_screen_diags = { git = "https://github.com/LemonjamesD/bevy_screen_diags_0.10", version = "0.5.4" }
bevy_ecs_tilemap = "0.10.0"
bevy_framepace = "0.12.1"
bevy_tweening = "0.7.0"
bytesize = "1.2.0"
memory-stats = "1.1.0"
tcmalloc = "0.3.0"
