[package]
name = "alien_swarm"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
# Core
graphical_alien_swarm_proc_macros = { path = "./graphical_alien_swarm_proc_macros" }
# Bevy
bevy = "0.11"
bevy_screen_diags = { git = "https://github.com/jespersm/bevy_screen_diags.git", branch = "bevy_0.11" }
bevy_ecs_tilemap = "0.11.0"
bevy_framepace = "0.13.3"
# External
seq-macro = "0.3.3"
bitfield-derive = "0.2.1"
partial-min-max = "0.4.0"
rand = "0.8.5"
paste = "1.0.12"
num-traits = "0.2.15"
serde_yaml = "0.9.22"
serde = { version = "1.0.171", features = ["derive"] }
sysinfo = "0.29.5"
bytesize = "1.2.0"
memory-stats = "1.1.0"
tcmalloc = "0.3.0"
anyhow = "1.0.72"
thiserror = "1.0.43"
lazy_static = "1.4.0"
